--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-
+<style>
+input{
+            width: 1200px;
+            text-indent: 20px;
+            height:60px;
+            font-size:20px;
+            color: inherit;
+            font-family: 'Space Mono', monospace;
+            background-color: #1f1f1f;
+            overflow:scroll;
+            text-align: left;
+            border-radius: 50px;
+            font-family: Arial;
+            position:absolute;
+        }
+</style>
+<form action='https://translate.google.com/translate?sl=ja&tl=en&u='>
+<input type="text" id="q" name="q" value="" placeholder="Search the web... ">
+</form>
