--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@ input{
             position:absolute;
         }
 </style>
+<center><h3>M</h3><br>
 <form action='https://translate.google.com/translate?sl=ja&tl=en&u='>
 <input type="text" id="q" name="q" value="" placeholder="Search the web... ">
 </form>
+</center>
