--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ input{
         }
 </style>
 <center><h3>M</h3><br>
-<form action='https://translate.google.com/translate?sl=ja&tl=en&u='>
+<form action='https://translate.google.com/translate?sl=ja&tl=en&u=https://duckduckgo.com/?q=a'>
 <input type="text" id="q" name="q" value="" placeholder="Search the web... ">
 </form>
 </center>
