--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@ input{
             font-family: Arial;
             position:absolute;
         }
+body{
+            font-family: 'Space Mono', monospace;
+            background-color: black;
+}
 </style>
-<center><h3>M</h3><br>
+<h3>Macarena Proxy</h3><be>
+<center>
 <form action='https://translate.google.com/translate?sl=ja&tl=en&u=https://duckduckgo.com/?q=a'>
 <input type="text" id="q" name="q" value="" placeholder="Search the web... ">
 </form>
