--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@ body{
             background-color: black;
 }
 </style>
-<h3>Macarena Proxy</h3><be>
 <center>
+<h1>Macarena Proxy</h1><br>
+</center>
 <form action='https://translate.google.com/translate?sl=ja&tl=en&u=https://duckduckgo.com/?q=a'>
 <input type="text" id="q" name="q" value="" placeholder="Search the web... ">
 </form>
-</center>
