--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@ body{
 <center>
 <h1>Macarena Proxy</h1><br>
 </center>
-<form action='https://translate.google.com/translate?sl=ja&tl=en&u=https://duckduckgo.com/?q=a'>
+<form action='https://translate.google.com/translate?sl=ja&tl=en&u=duckduckgo.com/?q='>
 <input type="text" id="q" name="q" value="" placeholder="Search the web... ">
 </form>
