--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@ body{
 <br>
 <br>
 <br>
-<form action='https://translate.google.com/translate?sl=ja&tl=en&u=duckduckgo.com/?q='>
-<input type="text" id="q" name="q" value="" placeholder="Search the web... ">
+<form action='javascript: location.replace("https://translate.google.com/translate?sl=ja&tl=en&u=duckduckgo.com/?q=" + document.getElementById("q"))'>
+<input type="text" id="q" value="" placeholder="Search the web... ">
 </form>
