--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@ body{
 <br>
 <br>
 <br>
-<form action='javascript: location.replace(`https://translate.google.com/translate?sl=ja&tl=en&u=duckduckgo.com/?q=` + document.getElementById(`q`).value)'>
+<form action='javascript: location.replace(`https://translate.google.com/translate?sl=ja&tl=en&u=` + document.getElementById(`q`).value)'>
 <input type="text" id="q" value="" placeholder="Search the web... ">
 </form>
