--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@ body{
 </center>
 <br>
 <br>
-<br>
+<be>
+<img src="https://raw.githubusercontent.com/GunnarasQuark/GunnarasQuark.github.io/main/th-2237387416.jpg" style="width: 70px; height: 70px; border-radius 100%;"> <span> </span>
 <form action='javascript: location.replace(`https://translate.google.com/translate?sl=ja&tl=en&u=` + document.getElementById(`q`).value)'>
 <input type="text" id="q" value="" placeholder="Search the web... ">
 </form>
