--- a/index.html
+++ b/index.html
@@ -1,30 +1,99 @@
-<style>
-input{
-            width: 1200px;
-            text-indent: 20px;
-            height:60px;
-            font-size:20px;
-            color: inherit;
-            font-family: 'Space Mono', monospace;
-            background-color: #1f1f1f;
-            overflow:scroll;
-            text-align: left;
-            border-radius: 50px;
-            font-family: Arial;
-            position:absolute;
-        }
-body{
-            font-family: 'Space Mono', monospace;
-            background-color: black;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gargoyle - Your Unrelenting Raid Protector</title>
+    <style>
+body {
+background-color: #0f172a;
+color: #a6adbb;
+font-family: "Roboto";
 }
-</style>
-<br><br><br>
-<center>
-<h1>Macarena Proxy</h1><br>
-</center>
-<br>
-<br>
-<br>
-<form action="javascript: location.replace(`https://translate.google.com/translate?sl=ja&amp;tl=en&amp;u=` + document.getElementById(`q`).value)">
-<img src="https://raw.githubusercontent.com/GunnarasQuark/GunnarasQuark.github.io/main/th-2237387416.jpg" style="width: 70px; height: 70px; border-radius: 50%;"> &nbsp; &nbsp;<span> </span><input type="text" id="q" value="" placeholder="Search the web... ">
-</form>
+button {
+font-family: "Roboto";
+border-radius: 50px;
+border-width: thick;
+padding: 25px;
+color: white;
+background-color: #0f172a;
+}
+button:hover{
+cursor: pointer;
+}
+    </style>    
+</head>
+<body>
+    <header>
+        <img src="gargoyle-hero.jpg" alt="Gargoyle, the watchful protector of your Discord server">
+        <h1>Gargoyle: Your Watchful Protector Against Rogue Raids</h1>
+        <p>Never fear raids again. Gargoyle stands guard, keeping your server safe and secure.</p>
+        <button class="invite-button" onclick="window.location.href='https://discord.com/api/oauth2/authorize?client_id=1201665902219894784&permissions=8&scope=bot'">Invite Gargoyle to Your Server</button>
+    </header>
+
+    <section class="features">
+        <h2>Features That Strike Fear in Raiders</h2>
+        <div class="feature-list">
+            <div class="feature">
+                <img src="instant-detection.svg" alt="Instant Raid Detection">
+                <h3>Instant Raid Detection</h3>
+                <p>Gargoyle's keen senses detect raids the moment they emerge, alerting you instantly.</p>
+            </div>
+            <div class="feature">
+                <img src="automated-countermeasures.svg" alt="Automated Countermeasures">
+                <h3>Automated Countermeasures</h3>
+                <p>Lock down channels, kick and ban troublemakers, and issue warnings automatically.</p>
+            </div>
+            <div class="feature">
+                <img src="customizable-settings.svg" alt="Customizable Settings">
+                <h3>Customizable Settings</h3>
+                <p>Tailor Gargoyle's defenses to match your server's unique needs and preferences.</p>
+            </div>
+            <div class="feature">
+                <img src="detailed-logs.svg" alt="Detailed Raid Logs">
+                <h3>Detailed Raid Logs</h3>
+                <p>Track every raid attempt to analyze patterns, identify repeat offenders, and refine your strategies.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="benefits">
+        <h2>Sleep Soundly, Your Server is Safe</h2>
+        <p>With Gargoyle protecting your realm, you can enjoy these benefits:</p>
+        <ul>
+            <li>Peace of mind knowing your community is secure</li>
+            <li>More time to focus on building a positive community</li>
+            <li>Effortless maintenance of order and authority</li>
+            <li>A symbol of security and resilience for your members</li>
+        </ul>
+    </section>
+
+    <section class="additional-features">
+        <h2>Even More Ways Gargoyle Guards Your Castle</h2>
+        <ul>
+            <li>Role integration for seamless moderation</li>
+            <li>Multi-server support for effortless protection across communities</li>
+            <li>24/7 support to answer your questions and provide assistance</li>
+        </ul>
+    </section>
+
+    <section class="testimonials">
+        <h2>What Guardians Are Saying</h2>
+        <blockquote>
+            "Gargoyle has been a lifesaver! Our server used to be plagued by raids, but now we can finally relax and enjoy our community without fear." - John Smith, Server Owner
+        </blockquote>
+        <blockquote>
+            "I've never seen a bot so effective at stopping raids. Gargoyle is truly a game-changer for Discord server security." - Jane Doe, Moderator
+        </blockquote>
+    </section>
+
+    <section class="cta">
+        <h2>Ready to Secure Your Server?</h2>
+    
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Gargoyle. All rights reserved
